--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Rodyyyy
+name: 越南仔
 
 # Short bio or description (displayed in the header)
-description: A Programmer
+description: born to win
 
 
 #
@@ -16,7 +16,7 @@ description: A Programmer
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: rodyyyy@foxmail.com
+  email: rodyyyy@qq.com
   facebook:
   flickr:
   github: rodyyyy
