--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: your_email@example.com
 author: your_name
-avatar: "‪F:\rodyyyy.github.io\images\1.jpg"
+avatar: "https://www.google.com/imgres?imgurl=http%3A%2F%2Fi2.17173cdn.com%2F2fhnvk%2FYWxqaGBf%2Fcms3%2FoStBtEbklvhzBwa.jpg&imgrefurl=http%3A%2F%2Flol.17173.com%2Fnews%2F02172016%2F103538820.shtml&docid=Ey3odT7YxlwC3M&tbnid=jSACw3IJuiRGzM%3A&vet=10ahUKEwjV__Cs8ezgAhWO9Z4KHSNSAicQMwhEKAUwBQ..i&w=615&h=359&bih=568&biw=1242&q=%E7%9B%96%E4%BC%A6&ved=0ahUKEwjV__Cs8ezgAhWO9Z4KHSNSAicQMwhEKAUwBQ&iact=mrc&uact=8"
 profile: One sentence introducing yourself.
 #twitter_username: twitter_username
 #github_username:  github_username
