--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 # Your information
 email: rodyyyy@qq.com
 author: rody
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
+avatar: "avatar.jpg"
 profile: 不知者无畏
 #twitter_username: twitter_username
 #github_username:  github_username
