--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 # Your information
 email: rodyyyy@qq.com
 author: rody
-avatar: "\\rodyyyy.github.io\images\avatar.jpg"
+avatar: "\images\avatar.jpg"
 profile: 不知者无畏
 #twitter_username: twitter_username
 #github_username:  github_username
