--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ profile: 不知者无畏
 #twitter_username: twitter_username
 #github_username:  github_username
 profile_links:
-  Email: "rodyyyy@qq.com"
-  GitHub: "https://rodyyyy.github.io/"
+  Twitter: "https://twitter.com/?lang=zh-cn"
+  Weibo: "https://weibo.com/u/3871967049/home"
   # You can add more profile links above, or edit _includes/sidebar.html 
 
 # Comment Service (Disqus or 多说)
