--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ profile: 不知者无畏
 #twitter_username: twitter_username
 #github_username:  github_username
 profile_links:
-  Twitter: "https://twitter.com/?lang=zh-cn"
+  Twitter: "https://twitter.com/"
   Weibo: "https://weibo.com/u/3871967049/home"
   # You can add more profile links above, or edit _includes/sidebar.html 
 
