--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 风中清焰
 url: "http://laobubu.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
 baseurl: "/" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
 #timezone: Asia/Chongqing
-description: >
+description: 须知少年凌云志，曾许人间第一流
   One or more sentences introducing  this blog.
   improve yourself 1% every single day,you will be 38 times better one year later!
 
