--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: 须知少年凌云志，曾许人间第一流
 email: rodyyyy@qq.com
 author: Rodyyyy
 avatar: "/images/avatar.jpg"
-profile: 临环宇而小天下
+profile: 须知少年凌云志，曾许人间第一流
 #twitter_username: twitter_username
 #github_username:  github_username
 profile_links:
